--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fav-cion.png" />
+    <link rel="icon" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Landing Page using React, Tailwind CSS, and Framer Motion</title>
+    <title>Aramco.com</title>
   </head>
   <body>
     <div id="root"></div>
